# odota-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
odota-core/: Cargo.toml
odota-core/src/: lib.rs
odota-py/: Cargo.toml  pyproject.toml
odota-py/pysrc/odota-py/: __init__.py  odota_py.pyi
odota-py/src/: lib.rs
odota-rust/: Cargo.toml
odota-rust/src/: lib.rs
