[package]
name = "odota-rust"
description = "Copy of OpenDota parser in Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
d2-stampede = { git = "https://github.com/Rupas1k/d2-stampede" }
d2-stampede-observers = { git = "https://github.com/Rupas1k/d2-stampede" }
anyhow = "1.0.86"
hashbrown = { version = "0.14.5", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"

[features]
mimalloc = ["d2-stampede/mimalloc"]