[package]
name = "odota-rust"
description = "Copy of OpenDota parser in Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
d2-stampede = "0.1"
d2-stampede-observers = "0.1"
anyhow = "1.0"
hashbrown = { version = "0.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"